# projectbirdracing

./: .gitignore  .gitmodules  Doxyfile  README.md
src/: .clang-format  CMakeLists.txt  build.py  libraries.json  version.h.in
src/client/: CMakeLists.txt  main.cpp
src/client/tests/: CMakeLists.txt  main.cpp
src/cmake/: buildsettings.cmake  catch2.cmake  functions.cmake  glew.cmake  glm.cmake  libraries.cmake  nlohmann_json.cmake  opengl.cmake  sdl.cmake  vulkan.cmake  vulkan_memory_allocator.cmake  vulkan_memory_manager.cmake
src/server/: CMakeLists.txt  main.cpp
src/server/scene/: CMakeLists.txt  scene_factory.cpp  scene_factory.h
src/server/tests/: CMakeLists.txt  main.cpp
src/server/tests/scene/: CMakeLists.txt  scene.cpp
src/shared/: CMakeLists.txt  types.h
src/shared/apis/: CMakeLists.txt
src/shared/apis/datetime/: CMakeLists.txt  datetime_manager.cpp  datetime_manager.h  idatetime_manager.h
src/shared/apis/file/: CMakeLists.txt  file_manager.cpp  file_manager.h  ifile_manager.h
src/shared/apis/graphics/: CMakeLists.txt  apis.h  application_information.h  color.h  config.cpp  config.h  graphics_manager_factory.cpp  graphics_manager_factory.h  igraphics_manager.h  performance_settings.h  render_system_screen_aligned_2d.cpp  render_system_screen_aligned_2d.h  render_systems.h  renderable_entities.cpp  renderable_entities.h  renderable_entity_2d.h  shader_types.h  types.h  vulkan_graphics_manager.cpp  vulkan_graphics_manager.h  vulkan_performance_settings.cpp  vulkan_performance_settings.h
src/shared/apis/graphics/opengl/: CMakeLists.txt  compositor.cpp  compositor.h  context.cpp  context.h  framebuffer.cpp  framebuffer.h  graphics_manager.cpp  graphics_manager.h  irender_target.h  mesh.cpp  mesh.h  mesh_shapes.cpp  mesh_shapes.h  opengl_dependencies.h  opengl_errors.cpp  opengl_errors.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  shader_program.cpp  shader_program.h  vertex.h
src/shared/apis/graphics/vulkan/: CMakeLists.txt  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  debug_messenger.cpp  debug_messenger.h  device.cpp  device.h  fence.cpp  fence.h  framebuffer.cpp  framebuffer.h  graphics_manager.cpp  graphics_manager.h  image.cpp  image.h  image_view.cpp  image_view.h  instance.cpp  instance.h  performance_settings.cpp  performance_settings.h  physical_device.cpp  physical_device.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  render_system_screen_aligned_2d.cpp  render_system_screen_aligned_2d.h  semaphore.cpp  semaphore.h  swap_chain.cpp  swap_chain.h  vma.cpp  vma.h  vma_implementation.cpp  (+2 more)
src/shared/apis/logging/: CMakeLists.txt  endpoint.h  ilog_manager.h  log_levels.cpp  log_levels.h  log_manager.cpp  log_manager.h  logging.cpp
src/shared/apis/logging/endpoints/: CMakeLists.txt  file.cpp  file.h  std_out.cpp  std_out.h  stdout.cpp  stdout.h
src/shared/apis/windowing/: CMakeLists.txt  application_window.cpp  application_window.h  config.cpp  config.h  console_window.cpp  console_window.h  iapplication_window.h  iconsole_window.h  iwindow_manager.h  resolution.h  resolutions.cpp  resolutions.h  types.h  vk_mem_alloc.cpp  window_manager.cpp  window_manager.h  window_size.h
src/shared/compile_time/: CMakeLists.txt  static_types.h
src/shared/data/: CMakeLists.txt  data_manager.cpp  data_manager.h  settings.cpp  settings.h  shader_code.h
src/shared/diagnostics/: CMakeLists.txt  counter_set.cpp  counter_set.h
src/shared/entity_component_system/: CMakeLists.txt  repository.cpp  repository.h  types.h
src/shared/entity_component_system/components/: CMakeLists.txt  camera.h  location_2d.h  location_3d.h
src/shared/game/: CMakeLists.txt  game_manager.cpp  game_manager.h
src/shared/memory/: CMakeLists.txt  basic_allocators.cpp  basic_allocators.h  bytes.cpp  bytes.h  gigabytes.cpp  gigabytes.h  kilobytes.cpp  kilobytes.h  megabytes.cpp  megabytes.h
src/shared/platform/: CMakeLists.txt  platform.h
src/shared/resource/: CMakeLists.txt  item.cpp  item.h  resource_manager.cpp  resource_manager.h
src/shared/scene/: CMakeLists.txt  constructor.cpp  constructor.h  constructor_types.h  iscene_factory.h  iscene_manager.h  scene_base.cpp  scene_base.h  scene_manager.cpp  scene_manager.h  scene_types.h
src/shared/scene/scenes/: CMakeLists.txt  loading_scene.cpp  loading_scene.h  splash_screen_scene.cpp  splash_screen_scene.h  world_generation_scene.cpp  world_generation_scene.h
src/shared/tests/: CMakeLists.txt  main.cpp  test_utils.cpp  test_utils.h
src/shared/tests/apis/: CMakeLists.txt
src/shared/tests/apis/datetime/: CMakeLists.txt  datetime_manager.cpp
src/shared/tests/apis/file/: CMakeLists.txt  file_manager.cpp
src/shared/tests/apis/graphics/: CMakeLists.txt  config.cpp  graphics_manager_factory.cpp
src/shared/tests/apis/logging/: CMakeLists.txt  log_levels.cpp  log_manager.cpp  logging.cpp
src/shared/tests/apis/windowing/: CMakeLists.txt  config.cpp
src/shared/tests/data/: CMakeLists.txt  data_manager.cpp  settings.cpp
src/shared/tests/diagnostics/: CMakeLists.txt  counter_set.cpp
src/shared/tests/entity_component_system/: CMakeLists.txt  repository.cpp
src/shared/tests/game/: CMakeLists.txt  game_manager.cpp
src/shared/tests/memory/: CMakeLists.txt  basic_allocators.cpp  bytes.cpp  gigabytes.cpp  kilobytes.cpp  megabytes.cpp
src/shared/tests/resource/: CMakeLists.txt  item.cpp  resource_manager.cpp
src/shared/tests/scene/: CMakeLists.txt  constructor.cpp  scene_manager.cpp
src/shared/tests/test_data/: CMakeLists.txt  text.txt
src/shared/tests/test_data/data/: settings.json  shader_fragment.frag
src/shared/tests/test_data/graphics/: config_invalid.json  config_opengl.json  config_vulkan.json
src/shared/tests/test_data/resources/: resource_list.json
src/shared/tests/utils/: CMakeLists.txt  defer.cpp  program_arguments.cpp  stringable.cpp  strings.cpp  uri.cpp
src/shared/utils/: CMakeLists.txt  defer.cpp  defer.h  program_arguments.cpp  program_arguments.h  stringable.cpp  stringable.h  strings.cpp  strings.h  uri.cpp  uri.h
(+48 files in other folders)
