target_sources(
    "${SHARED_PROJECT_NAME}"
    PUBLIC
        apis.h
        application_information.h
        color.h
        config.h
        graphics_manager_factory.h
        igraphics_manager.h
        performance_settings.h
        shader_types.h
        renderable_entities.h
        renderable_entity_2d.h
    PRIVATE
        config.cpp
        graphics_manager_factory.cpp
        renderable_entities.cpp
)

add_subdirectory("opengl")
add_subdirectory("vulkan")
